feat: schematicPost 수정 api 추가